--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "!wget -O- http://localhost:8100/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
+    "!wget -O- http://eligiblity-service:8100/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
    ]
   },
   {
