--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "Right after deployment, a selection of basic metrics is already collected by Seldon. \n",
     "\n",
-    "Open Grafana: https://metrics.mlproduction.dsiag.ch\n",
+    "Open Grafana: http://monitoring.mlproduction.dsiag.ch\n",
     "\n",
     "User: admin\n",
     "Password: password\n",
