--- a/notebooks/07 - Fault Tolerance.ipynb
+++ b/notebooks/07 - Fault Tolerance.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "To combine the results from multiple models, you can use the Seldon concept of combiners. Combiners aggregate the result of child models to a single response (check https://docs.seldon.io/projects/seldon-core/en/v1.1.0/python/python_component.html#combiners)\n",
     "\n",
-    "You find our combiner in the folder `services/support/seldon-combiner`. Study its source code. When does \n",
+    "You find our combiner in the folder `services/support/seldon-combiner`. Study its source code. When does it return 1?\n",
     "\n",
     "Create a new file in the folder pipelines named `combiners-seldon-model.yml`:\n",
     "\n",
