--- a/notebooks/02 - DVC .ipynb
+++ b/notebooks/02 - DVC .ipynb
@@ -67,11 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "amateur-round",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!cat data/.gitignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "792ed55a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global user.email \"you@example.com\"\n",
+    "!git config --global user.name \"Your Name\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +95,7 @@
     "\n",
     "1. Note the contents of data/.gitignore\n",
     "2. Copy our dataset to data/dvc_data.csv\n",
-    "3. Add data to DVC\n",
+    "3. Add data to DVC & GIT: `dvc add data/dvc_data.csv`, `git add data/`, `git commit -m \"initial data\"`\n",
     "4. Check the content of following files:\n",
     " - data/dvc_data.csv.dvc\n",
     " - data/.gitignore\n",
@@ -105,23 +118,27 @@
    "id": "ruled-preservation",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!cat data/.gitignore"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cultural-basin",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "atlantic-burlington",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/jovyan/work/notebooks\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stylish-subdivision",
+   "id": "28e7904c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,14 +173,14 @@
     "  - `echo \"oops\" > data/dvc_data.csv`\n",
     "3. Add changes to version control\n",
     "  - `dvc add data/dvc_data.csv`\n",
-    "  - `git add data/dvc_data.csv`\n",
+    "  - `git add data/dvc_data.csv.dvc`\n",
     "4. Commit in Git: `git commit -m \"changed data\"`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "personal-jones",
+   "id": "8f5a0fca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alternate-salad",
+   "id": "d08a7c6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heated-riverside",
+   "id": "87c0b2a4",
    "metadata": {},
    "outputs": [],
    "source": []
