--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -41,7 +41,7 @@
     "  \n",
     "  `services/dummy/DummyModel.py`,`services/dummy/requirements.txt` and `services/dummy/Dockerfile` to \n",
     "  `services/eligibilty/EligiblityModel.py`, `services/eligibilty/requirements.py` and `services/eligibilty/Dockerfile`.\n",
-    "2. Copy our model from `model/elibility_model.joblib` to `services/eligibilty/elibility_model.joblib`\n",
+    "2. Copy our model from `notebooks/model/elibility_model.joblib` to `services/eligibilty/elibility_model.joblib`\n",
     "3. Adjust `EligibilityModel.py` to load our pipeline from the joblib file and call our pipeline.\n"
    ]
   },
@@ -52,7 +52,7 @@
    "source": [
     "## Excercise 3: Build docker image and start it\n",
     "\n",
-    "To serve our model from Docker we need to adjust the Dockerfile at `services/dummy/Dockerfile`:\n",
+    "To serve our model from Docker we need to adjust the Dockerfile at `services/eligibilty/Dockerfile`:\n",
     "\n",
     "Change `ENV MODEL_NAME DummyModel` to `ENV MODEL_NAME EligibilityModel`\n",
     "\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "progressive-sixth",
    "metadata": {},
    "outputs": [
@@ -93,26 +93,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-05-05 13:54:52--  http://localhost:8100/predict\r\n",
-      "Resolving localhost (localhost)... ::1, 127.0.0.1\r\n",
-      "Connecting to localhost (localhost)|::1|:8100... failed: Connection refused.\r\n",
-      "Connecting to localhost (localhost)|127.0.0.1|:8100... connected.\r\n",
+      "--2021-08-09 13:45:04--  http://eligibility-service:9000/predict\r\n",
+      "Resolving eligibility-service (eligibility-service)... 127.0.0.1, 127.0.0.1, 127.0.0.1, ...\r\n",
+      "Connecting to eligibility-service (eligibility-service)|127.0.0.1|:9000... connected.\r\n",
       "HTTP request sent, awaiting response... 200 OK\r\n",
       "Length: 46 [application/json]\r\n",
       "Saving to: ‘STDOUT’\r\n",
       "\r\n",
       "\r",
-      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[1]},\"meta\":{}}\r\n",
+      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[0]},\"meta\":{}}\r\n",
       "\r",
       "-                   100%[===================>]      46  --.-KB/s    in 0s      \r\n",
       "\r\n",
-      "2021-05-05 13:54:52 (11.1 MB/s) - written to stdout [46/46]\r\n",
+      "2021-08-09 13:45:04 (9.27 MB/s) - written to stdout [46/46]\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "!wget -O- http://eligiblity-service:8100/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
+    "!wget -O- http://eligibility-service:9000/predict --post-data '{\"data\": { \"ndarray\": [[25000, 10000]]}}' --header='Content-Type:application/json'"
    ]
   },
   {
