--- a/notebooks/03 - Eligibility Service Tracking.ipynb
+++ b/notebooks/03 - Eligibility Service Tracking.ipynb
@@ -102,7 +102,7 @@
     "import mlflow\n",
     "\n",
     "\n",
-    "mlflow.set_tracking_uri(\"http://ml-flow:5500\")\n",
+    "mlflow.set_tracking_uri(\"http://mlflow:5500\")\n",
     "\n",
     "    "
    ]
