--- a/notebooks/01 - Eligibility Service Model.ipynb
+++ b/notebooks/01 - Eligibility Service Model.ipynb
@@ -818,7 +818,9 @@
     "\n",
     "store your pipeline at `'models/eligibility_pipeline.joblib`.\n",
     "\n",
-    "Use the documentation here: https://scikit-learn.org/stable/modules/model_persistence.html#python-specific-serialization"
+    "Use the documentation here: https://scikit-learn.org/stable/modules/model_persistence.html#python-specific-serialization\n",
+    "\n",
+    "Load the pipeline again and execute predict on your model. Does it still do the same?"
    ]
   },
   {
