--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -40,9 +40,11 @@
     "1. Copy dummy service\n",
     "  \n",
     "  `services/dummy/DummyModel.py`,`services/dummy/requirements.txt` and `services/dummy/Dockerfile` to \n",
-    "  `services/eligibilty/EligiblityModel.py`, `services/eligibilty/requirements.py` and `services/eligibilty/Dockerfile`.\n",
+    "  `services/eligibilty/EligibilityModel.py`, `services/eligibilty/requirements.txt` and `services/eligibilty/Dockerfile`.\n",
     "2. Copy our model from `notebooks/model/elibility_model.joblib` to `services/eligibilty/elibility_model.joblib`\n",
-    "3. Adjust `EligibilityModel.py` to load our pipeline from the joblib file and call our pipeline.\n"
+    "3. Adjust `EligibilityModel.py` to load our pipeline from the joblib file and call our pipeline. Use the function `load` from joblib to load our model.\n",
+    "\n",
+    "\n"
    ]
   },
   {
