--- a/notebooks/05 - Cloud Deployment.ipynb
+++ b/notebooks/05 - Cloud Deployment.ipynb
@@ -120,7 +120,11 @@
    "source": [
     "## Configure our ML service\n",
     "\n",
-    "After our cloud build ran successfully, we have a model packaged in a docker image stored in the cloud. To deploy it reference your image in `pipeline/eligibility-service.yml` and reapply the files again `kubectl apply -f pipeline`\n",
+    "After our cloud build ran successfully, we have a model packaged in a docker image stored in the cloud. To deploy it reference your image in `pipeline/eligibility-service.yml`\n",
+    "\n",
+    "Update `image: fluescher/sustaino-dummy-service` to `image: gcr.io/academy-300812/<yourname>/eligiblity-service:latest`\n",
+    "\n",
+    "and reapply the files again `kubectl apply -f pipeline`\n",
     "\n",
     "Test our sustaino frontend. Our model should be used now.\n"
    ]
