--- a/notebooks/08 - Release Strategies.ipynb
+++ b/notebooks/08 - Release Strategies.ipynb
@@ -29,8 +29,9 @@
    "id": "b306b911",
    "metadata": {},
    "source": [
+    "Reset the previous deployment by executing `kubectl delete -f pipeline`.\n",
     "\n",
-    "Create a new file in the folder `pipelines` named `ab-seldon-model.yml`:\n",
+    "Create a new file in the folder `pipeline` named `ab-seldon-model.yml`:\n",
     "\n",
     "```yaml\n",
     "apiVersion: machinelearning.seldon.io/v1alpha2\n",
@@ -70,6 +71,7 @@
     "      traffic: 80\n",
     "```\n",
     "\n",
+    "Apply this configuration: `kubectl apply -f pipeline`\n",
     "\n",
     "Verify that the pods are started correctly by issueing `kubectl get pods`. Are all up and running?\n",
     "\n",
@@ -142,6 +144,8 @@
     "      replicas: 1\n",
     "      shadow: true\n",
     "```\n",
+    "\n",
+    "Apply this configuration: `kubectl apply -f pipeline`\n",
     "\n",
     "Verify that the pods are started correctly by issueing `kubectl get pods`. Are all up and running?\n",
     "\n",
