additiona link to documentation

--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -42,7 +42,7 @@
     "  `services/dummy/DummyModel.py`,`services/dummy/requirements.txt` and `services/dummy/Dockerfile` to \n",
     "  `services/eligibilty/EligibilityModel.py`, `services/eligibilty/requirements.txt` and `services/eligibilty/Dockerfile`.\n",
     "2. Copy our model from `notebooks/model/elibility_model.joblib` to `services/eligibilty/elibility_model.joblib`\n",
-    "3. Adjust `EligibilityModel.py` to load our pipeline from the joblib file and call our pipeline. Use the function `load` from joblib to load our model.\n",
+    "3. Adjust `EligibilityModel.py` to load our pipeline from the joblib file and call our pipeline. Use the function `load` from joblib to load our model. See https://scikit-learn.org/stable/modules/model_persistence.html#python-specific-serialization\n",
     "\n",
     "\n"
    ]
