--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -92,10 +92,8 @@
     "\n",
     "Right after deployment, a selection of basic metrics is already collected by Seldon. \n",
     "\n",
-    "Open Grafana: http://monitoring.mlproduction.dsiag.ch\n",
+    "Open Prometheus: http://monitoring.mlproduction.dsiag.ch\n",
     "\n",
-    "User: admin\n",
-    "Password: password\n",
     "\n",
     "To create load, you can execute the following line, after replacing `<yourname>`.\n"
    ]
@@ -126,8 +124,6 @@
    "metadata": {},
    "source": [
     "### Query Metrics\n",
-    "\n",
-    "You can query metrics by clicking on _Explore_ in the Grafana menu. \n",
     "\n",
     "To query metrics you can enter a Prometheus query in the search bar.\n",
     "\n",
@@ -174,9 +170,9 @@
     "\n",
     "You find the deployed model definition in the folder `services/seldon-dummy`.\n",
     "\n",
-    "You can see that it defines two custom metrics. Are you able to find them in Grafana?\n",
+    "You can see that it defines two custom metrics. Are you able to find them in Prometheus?\n",
     "\n",
-    "You can query multiple metrics using the Grafana Query: `{ __name__=~\"metric1|metric2\" }`"
+    "You can query multiple metrics using the Prometheus Query: `{ __name__=~\"metric1|metric2\" }`"
    ]
   },
   {
@@ -190,7 +186,7 @@
     "\n",
     "1. Return custom metrics\n",
     "2. Rebuild it using Cloud Build\n",
-    "3. Update your  `seldon-model.yml` to use your image instead of the dummy image\n",
+    "3. Update your  `seldon-model.yml` to use your image (`gcr.io/academy-300812/<yourname>/eligiblity-service`) instead of the dummy image\n",
     "4. Reapply your `seldon-model.yml`. Verify that the model does not alway return **1**\n",
     "\n"
    ]
@@ -198,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
