--- a/notebooks/08 - Release Strategies.ipynb
+++ b/notebooks/08 - Release Strategies.ipynb
@@ -82,7 +82,7 @@
     "Replace `<yourname>` with your name.\n",
     "\n",
     "Questions:\n",
-    "- Generate some load to this model. Can you verify if both deployments get traffic? Check Grafana\n",
+    "- Generate some load to this model. Can you verify if both deployments get traffic? Check Prometheus\n",
     "- How is the user impacted by this deployment?\n",
     "\n"
    ]
@@ -143,6 +143,7 @@
     "      name: real-classifier\n",
     "      replicas: 1\n",
     "      shadow: true\n",
+    "      traffic: 100\n",
     "```\n",
     "\n",
     "Apply this configuration: `kubectl apply -f pipeline`\n",
@@ -153,7 +154,7 @@
     "\n",
     "\n",
     "Questions:\n",
-    "- Generate some load to this model. Can you verify if both deployments get traffic? Check Grafana\n",
+    "- Generate some load to this model. Can you verify if both deployments get traffic? Check Prometheus\n",
     "- How is the user impacted by this deployment?"
    ]
   },
@@ -168,7 +169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
