--- a/notebooks/02 - DVC .ipynb
+++ b/notebooks/02 - DVC .ipynb
@@ -35,16 +35,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 371400\r\n",
-      "-rw-r--r--. 1 jovyan users    472458 May  5 13:05 '00 - Explore Loan Data .ipynb'\r\n",
-      "-rw-r--r--. 1 jovyan users     29435 May  5 13:06 '01 - Eligibility Service Model.ipynb'\r\n",
-      "-rw-r--r--. 1 jovyan users      8382 May  5 13:08 '02 - DVC .ipynb'\r\n",
-      "-rw-r--r--. 1 jovyan users      6840 May  5 13:05 '03 - Eligibility Service Tracking.ipynb'\r\n",
-      "drwxr-xr-x. 3 jovyan users      4096 May  5 05:58  artifacts\r\n",
-      "-rwxrwxrwx. 1 root   root  379763062 Apr 13 13:02  clean-loan-data.csv\r\n",
-      "drwxrwxrwx. 2 root   root       4096 May  3 16:00  data\r\n",
-      "drwxr-xr-x. 3 jovyan users      4096 Apr 28 14:40  mlruns\r\n",
-      "drwxr-xr-x. 2 jovyan users      4096 Apr 16 06:14  models\r\n"
+      "total 371400\n",
+      "-rw-r--r--. 1 jovyan users    472458 May  5 13:05 '00 - Explore Loan Data .ipynb'\n",
+      "-rw-r--r--. 1 jovyan users     29435 May  5 13:06 '01 - Eligibility Service Model.ipynb'\n",
+      "-rw-r--r--. 1 jovyan users      8382 May  5 13:08 '02 - DVC .ipynb'\n",
+      "-rw-r--r--. 1 jovyan users      6840 May  5 13:05 '03 - Eligibility Service Tracking.ipynb'\n",
+      "drwxr-xr-x. 3 jovyan users      4096 May  5 05:58  artifacts\n",
+      "-rwxrwxrwx. 1 root   root  379763062 Apr 13 13:02  clean-loan-data.csv\n",
+      "drwxrwxrwx. 2 root   root       4096 May  3 16:00  data\n",
+      "drwxr-xr-x. 3 jovyan users      4096 Apr 28 14:40  mlruns\n",
+      "drwxr-xr-x. 2 jovyan users      4096 Apr 16 06:14  models\n"
      ]
     }
    ],
@@ -84,6 +84,17 @@
    "source": [
     "!git config --global user.email \"you@example.com\"\n",
     "!git config --global user.name \"Your Name\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7175044a-0f6d-440b-aaea-668b64a15221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git config --global --add safe.directory /home/jovyan/work\n",
+    "!git checkout -b florian"
    ]
   },
   {
@@ -132,7 +143,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/notebooks\r\n"
+      "/home/jovyan/work/notebooks\n"
      ]
     }
    ],
@@ -249,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -263,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
