--- a/notebooks/08 - Release Strategies.ipynb
+++ b/notebooks/08 - Release Strategies.ipynb
@@ -29,7 +29,7 @@
    "id": "b306b911",
    "metadata": {},
    "source": [
-    "Reset the previous deployment by executing `kubectl delete -f pipeline`.\n",
+    "Reset the previous deployment by executing `kubectl delete seldondeployments <yourname-model>`.\n",
     "\n",
     "Create a new file in the folder `pipeline` named `ab-seldon-model.yml`:\n",
     "\n",
@@ -71,7 +71,7 @@
     "      traffic: 80\n",
     "```\n",
     "\n",
-    "Apply this configuration: `kubectl apply -f pipeline`\n",
+    "Apply this configuration: `kubectl apply -f pipeline/ab-seldon-model.yml`\n",
     "\n",
     "Verify that the pods are started correctly by issueing `kubectl get pods`. Are all up and running?\n",
     "\n",
@@ -102,7 +102,7 @@
    "source": [
     "## Shadowing\n",
     "\n",
-    "To test a shadow deployment, first remove the previous deployment using `kubectl delete -f ab-seldon-model.yml`:\n",
+    "To test a shadow deployment, first remove the previous deployment using `kubectl delete -f pipeline/ab-seldon-model.yml`:\n",
     "\n",
     "\n",
     "Create a new file in the folder `pipelines` named `shadow-seldon-model.yml`:\n",
@@ -146,7 +146,7 @@
     "      traffic: 100\n",
     "```\n",
     "\n",
-    "Apply this configuration: `kubectl apply -f pipeline`\n",
+    "Apply this configuration: `kubectl apply -f pipeline/shadow-seldon-model.yml`\n",
     "\n",
     "Verify that the pods are started correctly by issueing `kubectl get pods`. Are all up and running?\n",
     "\n",
