Remove seldon-dummy-service references

--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b54c2c9f",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a6f9eb65",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3fc2036a",
    "metadata": {},
@@ -37,7 +40,7 @@
     "    - spec:\n",
     "        containers:\n",
     "        - name: classifier\n",
-    "          image: fluescher/seldon-dummy-service\n",
+    "          image: fluescher/sustaino-dummy-service\n",
     "    graph:\n",
     "      children: []\n",
     "      endpoint:\n",
@@ -60,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a2a8b025",
    "metadata": {},
@@ -84,6 +88,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b4c3d44",
    "metadata": {},
@@ -109,6 +114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "aff7d0d8",
    "metadata": {},
@@ -119,6 +125,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "68d2d0f9",
    "metadata": {},
@@ -131,6 +138,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64a3af7e",
    "metadata": {},
@@ -162,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de282059",
    "metadata": {},
@@ -176,6 +185,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "91157a0c",
    "metadata": {},
