--- a/notebooks/07 - Fault Tolerance.ipynb
+++ b/notebooks/07 - Fault Tolerance.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50e497a5",
    "metadata": {},
@@ -10,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "19f2d71a",
    "metadata": {},
@@ -18,6 +20,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a293271f",
    "metadata": {},
@@ -40,7 +43,7 @@
     "    - spec:\n",
     "        containers:\n",
     "        - name: dummy-classifier\n",
-    "          image: fluescher/seldon-dummy-service\n",
+    "          image: fluescher/sustaino-dummy-service\n",
     "        - name: real-classifier\n",
     "          image: gcr.io/academy-300812/<yourname>/eligiblity-service:latest\n",
     "        - name: combiner\n",
@@ -75,6 +78,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "33a8c204",
    "metadata": {},
@@ -102,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7cdcbde4",
    "metadata": {},
@@ -118,6 +123,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e29ef2d",
    "metadata": {},
@@ -126,6 +132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75b7f53c",
    "metadata": {},
@@ -151,7 +158,7 @@
     "    - spec:\n",
     "        containers:\n",
     "        - name: dummy-classifier\n",
-    "          image: fluescher/seldon-dummy-service\n",
+    "          image: fluescher/sustaino-dummy-service\n",
     "        - name: post-process\n",
     "          image: fluescher/seldon-postprocess\n",
     "    graph:\n",
@@ -197,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "78eeecc1",
    "metadata": {},
