--- a/notebooks/08 - Release Strategies.ipynb
+++ b/notebooks/08 - Release Strategies.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8ed7179",
    "metadata": {},
@@ -17,6 +18,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5735f18a",
    "metadata": {},
@@ -25,6 +27,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b306b911",
    "metadata": {},
@@ -45,7 +48,7 @@
     "        - spec:\n",
     "            containers:\n",
     "            - name: dummy-classifier\n",
-    "              image: fluescher/seldon-dummy-service\n",
+    "              image: fluescher/sustaino-dummy-service\n",
     "      graph:\n",
     "        children: []\n",
     "        endpoint:\n",
@@ -96,6 +99,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04f93f5e",
    "metadata": {},
@@ -120,7 +124,7 @@
     "        - spec:\n",
     "            containers:\n",
     "            - name: dummy-classifier\n",
-    "              image: fluescher/seldon-dummy-service\n",
+    "              image: fluescher/sustaino-dummy-service\n",
     "      graph:\n",
     "        children: []\n",
     "        endpoint:\n",
@@ -157,6 +161,14 @@
     "- Generate some load to this model. Can you verify if both deployments get traffic? Check Prometheus\n",
     "- How is the user impacted by this deployment?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92ba505b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
