Remove references to seldon-dummy-service

--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -177,7 +177,7 @@
    "source": [
     "## Custom Metrics\n",
     "\n",
-    "You find the deployed model definition in the folder `services/seldon-dummy`.\n",
+    "You find the deployed model definition in the folder `services/dummy`.\n",
     "\n",
     "You can see that it defines two custom metrics. Are you able to find them in Prometheus?\n",
     "\n",
@@ -192,7 +192,7 @@
    "source": [
     "### Update your real eligibility model\n",
     "\n",
-    "Update your eligibility model to behave like the seldon-dummy service:\n",
+    "Update your eligibility model to behave like the dummy service:\n",
     "\n",
     "1. Return custom metrics\n",
     "2. Rebuild it using Cloud Build\n",
