Document image build

--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "native-dinner",
    "metadata": {},
@@ -11,6 +12,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "given-trademark",
    "metadata": {},
@@ -29,6 +31,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "systematic-pakistan",
    "metadata": {},
@@ -48,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "differential-classics",
    "metadata": {},
@@ -72,10 +76,11 @@
     "    build: ./services/eligibility\n",
     "``` \n",
     "\n",
-    "Then restart docker-compose: `docker-compose down` and `docker-compose up`"
+    "Then rebuild the eligibility-serviec with docker-compose: `docker-compose down`, `docker-compose build eligibility-service` and `docker-compose up`"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "impressed-amateur",
    "metadata": {},
@@ -102,9 +107,9 @@
       "Length: 46 [application/json]\r\n",
       "Saving to: ‘STDOUT’\r\n",
       "\r\n",
-      "\r",
+      "\r\n",
       "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[0]},\"meta\":{}}\r\n",
-      "\r",
+      "\r\n",
       "-                   100%[===================>]      46  --.-KB/s    in 0s      \r\n",
       "\r\n",
       "2021-08-09 13:45:04 (9.27 MB/s) - written to stdout [46/46]\r\n",
@@ -117,6 +122,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "boxed-adapter",
    "metadata": {},
