--- a/notebooks/05 - Cloud Deployment.ipynb
+++ b/notebooks/05 - Cloud Deployment.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "golden-vegetation",
    "metadata": {},
@@ -10,6 +11,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "opposed-yemen",
    "metadata": {},
@@ -28,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c503fdcc",
    "metadata": {},
@@ -36,7 +39,7 @@
     "\n",
     "To connect to the cluster execute this:\n",
     "\n",
-    "`gcloud container clusters get-credentials ml-in-production --zone us-central1-c --project academy-300812`  \n",
+    "`gcloud container clusters get-credentials ml-in-production --zone europe-west3-c --project academy-300812`  \n",
     "\n",
     "After executing this you should be able to see our cluster nodes:\n",
     "\n",
@@ -52,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d521089f",
    "metadata": {},
@@ -66,6 +70,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "302d0ca5",
    "metadata": {},
@@ -86,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3c146862",
    "metadata": {},
@@ -100,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a9b2c376",
    "metadata": {},
@@ -114,6 +121,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9bdb79e0",
    "metadata": {},
