--- a/notebooks/03 - Eligibility Service Tracking.ipynb
+++ b/notebooks/03 - Eligibility Service Tracking.ipynb
@@ -78,7 +78,8 @@
     "1. set_experiment\n",
     "2. start run\n",
     "3. log_param\n",
-    "4. set_tag\n",
+    "4. log_metric\n",
+    "5. set_tag\n",
     "\n",
     "Check the MLFlow UI: http://localhost:5500\n",
     "\n",
@@ -140,7 +141,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
