--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "native-dinner",
    "metadata": {},
@@ -12,7 +11,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "given-trademark",
    "metadata": {},
@@ -31,7 +29,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "systematic-pakistan",
    "metadata": {},
@@ -51,7 +48,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "differential-classics",
    "metadata": {},
@@ -80,14 +76,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "impressed-amateur",
    "metadata": {},
    "source": [
     "## Excercise 4: Call our eligiblity service\n",
     "\n",
-    "Our eligiblity service now exposes our model using a REST API. We can call it:\n"
+    "Our eligibility service now exposes our model using a REST API. We can call it:\n"
    ]
   },
   {
@@ -100,20 +95,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-09 13:45:04--  http://eligibility-service:9000/predict\r\n",
-      "Resolving eligibility-service (eligibility-service)... 127.0.0.1, 127.0.0.1, 127.0.0.1, ...\r\n",
-      "Connecting to eligibility-service (eligibility-service)|127.0.0.1|:9000... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 46 [application/json]\r\n",
-      "Saving to: ‘STDOUT’\r\n",
-      "\r\n",
-      "\r\n",
-      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[0]},\"meta\":{}}\r\n",
-      "\r\n",
-      "-                   100%[===================>]      46  --.-KB/s    in 0s      \r\n",
-      "\r\n",
-      "2021-08-09 13:45:04 (9.27 MB/s) - written to stdout [46/46]\r\n",
-      "\r\n"
+      "--2021-08-09 13:45:04--  http://eligibility-service:9000/predict\n",
+      "Resolving eligibility-service (eligibility-service)... 127.0.0.1, 127.0.0.1, 127.0.0.1, ...\n",
+      "Connecting to eligibility-service (eligibility-service)|127.0.0.1|:9000... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 46 [application/json]\n",
+      "Saving to: ‘STDOUT’\n",
+      "\n",
+      "\n",
+      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[0]},\"meta\":{}}\n",
+      "\n",
+      "-                   100%[===================>]      46  --.-KB/s    in 0s      \n",
+      "\n",
+      "2021-08-09 13:45:04 (9.27 MB/s) - written to stdout [46/46]\n",
+      "\n"
      ]
     }
    ],
@@ -122,7 +117,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "boxed-adapter",
    "metadata": {},
@@ -133,7 +127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
