--- a/notebooks/05 - Cloud Deployment.ipynb
+++ b/notebooks/05 - Cloud Deployment.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "golden-vegetation",
    "metadata": {},
@@ -11,7 +10,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "opposed-yemen",
    "metadata": {},
@@ -30,7 +28,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c503fdcc",
    "metadata": {},
@@ -55,7 +52,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d521089f",
    "metadata": {},
@@ -70,7 +66,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "302d0ca5",
    "metadata": {},
@@ -91,7 +86,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c146862",
    "metadata": {},
@@ -106,7 +100,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a9b2c376",
    "metadata": {},
@@ -121,7 +114,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9bdb79e0",
    "metadata": {},
@@ -130,7 +122,7 @@
     "\n",
     "After our cloud build ran successfully, we have a model packaged in a docker image stored in the cloud. To deploy it reference your image in `pipeline/eligibility-service.yml`\n",
     "\n",
-    "Update `image: fluescher/sustaino-dummy-service` to `image: gcr.io/academy-300812/<yourname>/eligiblity-service:latest`\n",
+    "Update `image: fluescher/sustaino-dummy-service` to `image: gcr.io/academy-300812/<yourname>/eligibility-service:latest`\n",
     "\n",
     "and reapply the files again `kubectl apply -f pipeline`\n",
     "\n",
@@ -140,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -154,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
