--- a/notebooks/07 - Fault Tolerance.ipynb
+++ b/notebooks/07 - Fault Tolerance.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "50e497a5",
    "metadata": {},
@@ -11,7 +10,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "19f2d71a",
    "metadata": {},
@@ -20,7 +18,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a293271f",
    "metadata": {},
@@ -45,7 +42,7 @@
     "        - name: dummy-classifier\n",
     "          image: fluescher/sustaino-dummy-service\n",
     "        - name: real-classifier\n",
-    "          image: gcr.io/academy-300812/<yourname>/eligiblity-service:latest\n",
+    "          image: gcr.io/academy-300812/<yourname>/eligibility-service:latest\n",
     "        - name: combiner\n",
     "          image: fluescher/seldon-combiner\n",
     "    graph:\n",
@@ -64,7 +61,7 @@
     "        type: MODEL\n",
     "        endpoint:\n",
     "          type: REST\n",
-    "    name: eligiblity\n",
+    "    name: eligibility\n",
     "    labels:\n",
     "      version: v1\n",
     "    replicas: 1\n",
@@ -78,7 +75,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "33a8c204",
    "metadata": {},
@@ -97,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: yourname: No such file or directory\r\n"
+      "/bin/bash: yourname: No such file or directory\n"
      ]
     }
    ],
@@ -106,7 +102,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7cdcbde4",
    "metadata": {},
@@ -119,11 +114,10 @@
     "    \n",
     "Execute `kubectl logs <podname> <containername>`\n",
     "\n",
-    "eg. `kubectl logs florian-model-eligiblity-0-dummy-classifier-post-process-647md7 real-classifier"
+    "eg. `kubectl logs florian-model-eligibility-0-dummy-classifier-post-process-647md7 real-classifier"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3e29ef2d",
    "metadata": {},
@@ -132,7 +126,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "75b7f53c",
    "metadata": {},
@@ -172,7 +165,7 @@
     "        type: MODEL\n",
     "        endpoint:\n",
     "          type: REST\n",
-    "    name: eligiblity\n",
+    "    name: eligibility\n",
     "    labels:\n",
     "      version: v1\n",
     "    replicas: 1\n",
@@ -195,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: yourname: No such file or directory\r\n"
+      "/bin/bash: yourname: No such file or directory\n"
      ]
     }
    ],
@@ -204,7 +197,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "78eeecc1",
    "metadata": {},
@@ -215,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -229,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
