--- a/notebooks/08 - Release Strategies.ipynb
+++ b/notebooks/08 - Release Strategies.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e8ed7179",
    "metadata": {},
@@ -18,7 +17,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5735f18a",
    "metadata": {},
@@ -27,7 +25,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b306b911",
    "metadata": {},
@@ -62,7 +59,7 @@
     "        - spec:\n",
     "            containers:\n",
     "            - name: real-classifier\n",
-    "              image: gcr.io/academy-300812/<yourname>/eligiblity-service:latest\n",
+    "              image: gcr.io/academy-300812/<yourname>/eligibility-service:latest\n",
     "      graph:\n",
     "        children: []\n",
     "        endpoint:\n",
@@ -99,7 +96,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "04f93f5e",
    "metadata": {},
@@ -137,7 +133,7 @@
     "        - spec:\n",
     "            containers:\n",
     "            - name: real-classifier\n",
-    "              image: gcr.io/academy-300812/<yourname>/eligiblity-service:latest\n",
+    "              image: gcr.io/academy-300812/<yourname>/eligibility-service:latest\n",
     "      graph:\n",
     "        children: []\n",
     "        endpoint:\n",
