--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -80,7 +80,7 @@
    "id": "impressed-amateur",
    "metadata": {},
    "source": [
-    "## Excercise 4: Call our eligiblity service\n",
+    "## Excercise 4: Call our eligibility service\n",
     "\n",
     "Our eligibility service now exposes our model using a REST API. We can call it:\n"
    ]
