--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b54c2c9f",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a6f9eb65",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3fc2036a",
    "metadata": {},
@@ -63,7 +60,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a2a8b025",
    "metadata": {},
@@ -88,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9b4c3d44",
    "metadata": {},
@@ -114,7 +109,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "aff7d0d8",
    "metadata": {},
@@ -125,7 +119,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "68d2d0f9",
    "metadata": {},
@@ -138,7 +131,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "64a3af7e",
    "metadata": {},
@@ -170,7 +162,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "de282059",
    "metadata": {},
@@ -185,7 +176,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "91157a0c",
    "metadata": {},
@@ -196,7 +186,7 @@
     "\n",
     "1. Return custom metrics\n",
     "2. Rebuild it using Cloud Build\n",
-    "3. Update your  `seldon-model.yml` to use your image (`gcr.io/academy-300812/<yourname>/eligiblity-service`) instead of the dummy image\n",
+    "3. Update your  `seldon-model.yml` to use your image (`gcr.io/academy-300812/<yourname>/eligibility-service`) instead of the dummy image\n",
     "4. Reapply your `seldon-model.yml`. Verify that the model does not alway return **1**\n",
     "\n"
    ]
