Change permissions before executing cloud build

--- a/notebooks/04 - Containerization.ipynb
+++ b/notebooks/04 - Containerization.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "progressive-sixth",
    "metadata": {},
    "outputs": [
@@ -95,25 +95,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-09 13:45:04--  http://eligibility-service:9000/predict\n",
-      "Resolving eligibility-service (eligibility-service)... 127.0.0.1, 127.0.0.1, 127.0.0.1, ...\n",
-      "Connecting to eligibility-service (eligibility-service)|127.0.0.1|:9000... connected.\n",
+      "--2025-07-04 13:31:37--  http://eligibility-service:9000/predict\n",
+      "Resolving eligibility-service (eligibility-service)... 10.89.1.2\n",
+      "Connecting to eligibility-service (eligibility-service)|10.89.1.2|:9000... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 46 [application/json]\n",
+      "Length: 153 [application/json]\n",
       "Saving to: ‘STDOUT’\n",
       "\n",
+      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[1]},\"meta\":{\"metrics\":[{\"key\":\"eligible\",\"type\":\"COUNTER\",\"value\":1},{\"key\":\"not_eligible\",\"type\":\"COUNTER\",\"value\":0}]}}\n",
+      "-                   100%[===================>]     153  --.-KB/s    in 0s      \n",
       "\n",
-      "-                     0%[                    ]       0  --.-KB/s               {\"data\":{\"names\":[],\"ndarray\":[0]},\"meta\":{}}\n",
-      "\n",
-      "-                   100%[===================>]      46  --.-KB/s    in 0s      \n",
-      "\n",
-      "2021-08-09 13:45:04 (9.27 MB/s) - written to stdout [46/46]\n",
+      "2025-07-04 13:31:37 (37.8 MB/s) - written to stdout [153/153]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!wget -O- http://eligibility-service:9000/predict --post-data '{\"data\": { \"ndarray\": [[25000, 10000]]}}' --header='Content-Type:application/json'"
+    "!wget -O- http://eligibility-service:9000/predict --post-data '{\"data\": { \"ndarray\": [[25000, 100000]]}}' --header='Content-Type:application/json'"
    ]
   },
   {
