--- a/notebooks/05 - Cloud Deployment.ipynb
+++ b/notebooks/05 - Cloud Deployment.ipynb
@@ -110,6 +110,7 @@
     "\n",
     "1. Read through `pipeline/train_model.py` most of it should be very similar.\n",
     "2. Replace the placeholder `<yourname>` in `cloudbuild.yaml`.\n",
+    "3. In order to prevent permission errors when building, execute `chmod 777 -R ~/work/services/eligibility` \n",
     "3. Build our model in the cloud: execute `gcloud builds submit`"
    ]
   },
