Migrate Ex to Gateway API

--- a/notebooks/06 - Monitoring.ipynb
+++ b/notebooks/06 - Monitoring.ipynb
@@ -13,7 +13,7 @@
    "id": "a6f9eb65",
    "metadata": {},
    "source": [
-    "## 1. Serve Model using Seldon Core\n"
+    "## 1. Serve Model using Gateway API\n"
    ]
   },
   {
@@ -21,42 +21,42 @@
    "id": "3fc2036a",
    "metadata": {},
    "source": [
-    "### Create Dummy Seldon Core deployment\n",
+    "### Create Gateway Http Route to Eligibility Service\n",
     "\n",
-    "Create a new file in the folder `pipelines` named `seldon-model.yml`:\n",
+    "Create a new file in the folder `pipelines` named `eligibility-service-route.yml`:\n",
     "\n",
     "```yaml\n",
-    "apiVersion: machinelearning.seldon.io/v1alpha2\n",
-    "kind: SeldonDeployment\n",
+    "apiVersion: gateway.networking.k8s.io/v1\n",
+    "kind: HTTPRoute\n",
     "metadata:\n",
-    "  name: <yourname>-model\n",
+    "  name: eligibility-service-route\n",
     "spec:\n",
-    "  name: <yourname>-model-deployment\n",
-    "  predictors:\n",
-    "  - componentSpecs:\n",
-    "    - spec:\n",
-    "        containers:\n",
-    "        - name: classifier\n",
-    "          image: fluescher/sustaino-dummy-service\n",
-    "    graph:\n",
-    "      children: []\n",
-    "      endpoint:\n",
-    "        type: REST\n",
-    "      name: classifier\n",
-    "      type: MODEL\n",
-    "    name: eligibility\n",
-    "    labels:\n",
-    "      version: v1\n",
-    "    replicas: 1\n",
+    "  parentRefs:\n",
+    "    - name: mlprod-gateway\n",
+    "      namespace: envoy-gateway-system\n",
+    "  rules:\n",
+    "    - matches:\n",
+    "        - path:\n",
+    "            type: PathPrefix\n",
+    "            value: /<yourname>\n",
+    "      filters:\n",
+    "        - type: URLRewrite\n",
+    "          urlRewrite:\n",
+    "            path:\n",
+    "              type: ReplacePrefixMatch\n",
+    "              replacePrefixMatch: /\n",
+    "      backendRefs:\n",
+    "        - name: eligibility-service\n",
+    "          port: 9000\n",
     "```\n",
     "\n",
     "Replace `<yourname>` with your name.\n",
     "\n",
-    "This will create a new seldon deployment that is exposed over the Api Gateway. Check the deployment state of your model:\n",
+    "This will create a new route that is exposed over the Api Gateway. Check the deployment state of your model:\n",
     "\n",
-    "`kubectl get pods`\n",
+    "`kubectl get httproute`\n",
     "\n",
-    "If you see your deployment running you can continue testing."
+    "If you see your route is configured you can continue testing."
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget -O- mlproduction.dsiag.ch/seldon/<yourname>/<yourname>-model/api/v1.0/predictions --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
+    "!wget -O- mlproduction.dsiag.ch/<yourname>/api/v1.0/predict --post-data '{\"data\": { \"ndarray\": [[25000, 189625]]}}' --header='Content-Type:application/json'"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!NAMESPACE=<yourname> MODEL=<yourname>-model ../services/create-load.sh"
+    "!NAMESPACE=<yourname> ../services/create-load.sh"
    ]
   },
   {
@@ -152,13 +152,13 @@
     "```yaml\n",
     "env:\n",
     "    - name: ELIGIBILITY_API_ENDPOINT\n",
-    "      value: http://mlproduction.dsiag.ch/seldon/<yourname>/<yourname>-model/api/v1.0/predictions\n",
+    "      value: http://mlproduction.dsiag.ch/<yourname>/predict\n",
     "```\n",
     "\n",
     "\n",
     "Remember to replace `<yourname>`\n",
     "\n",
-    "Apply the configuration using `kubectl apply -f pipeline`"
+    "Apply the configuration using `kubectl apply -f pipeline/frontend.yml`"
    ]
   },
   {
@@ -173,22 +173,6 @@
     "You can see that it defines two custom metrics. Are you able to find them in Prometheus?\n",
     "\n",
     "You can query multiple metrics using the Prometheus Query: `{ __name__=~\"metric1|metric2\" }`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "91157a0c",
-   "metadata": {},
-   "source": [
-    "### Update your real eligibility model\n",
-    "\n",
-    "Update your eligibility model to behave like the dummy service:\n",
-    "\n",
-    "1. Return custom metrics\n",
-    "2. Rebuild it using Cloud Build\n",
-    "3. Update your  `seldon-model.yml` to use your image (`gcr.io/academy-300812/<yourname>/eligibility-service`) instead of the dummy image\n",
-    "4. Reapply your `seldon-model.yml`. Verify that the model does not alway return **1**\n",
-    "\n"
    ]
   }
  ],
